--- a/Galary/ResourceDictionary/ColorDictionary.xaml
+++ b/Galary/ResourceDictionary/ColorDictionary.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    
     <LinearGradientBrush x:Key="mainColor">
         <GradientStop Color="Red" Offset="0"></GradientStop>
         <GradientStop Color="Orange" Offset="0.25" ></GradientStop>
@@ -13,4 +14,14 @@
         <GradientStop Color="#5D26C1" Offset="1" ></GradientStop>
     </LinearGradientBrush>
 
+    <LinearGradientBrush x:Key="userControl">
+        <GradientStop Color="#FFFDE4" Offset="0" ></GradientStop>
+        <GradientStop Color="#005AA7" Offset="1"></GradientStop>
+    </LinearGradientBrush>
+
+    <LinearGradientBrush x:Key="userControl_background">
+        <GradientStop Color="#333333" Offset="0" ></GradientStop>
+        <GradientStop Color="#dd1818" Offset="1"></GradientStop>
+    </LinearGradientBrush>
+    
 </ResourceDictionary>
