--- a/Galary/MainWindow.xaml
+++ b/Galary/MainWindow.xaml
@@ -58,7 +58,7 @@
             </MenuItem>
 
             <MenuItem FontSize="{StaticResource MenuSize}" Header="Edit">
-                <MenuItem FontSize="{StaticResource MenuItemSize}" Header="Add file" ></MenuItem>
+                <MenuItem FontSize="{StaticResource MenuItemSize}" Click="Add_Image" Header="Add image" ></MenuItem>
                 <MenuItem FontSize="{StaticResource MenuItemSize}" Header="Add folder" ></MenuItem>
             </MenuItem>
 
