--- a/Galary/UserControls/UserControl_Photos.xaml
+++ b/Galary/UserControls/UserControl_Photos.xaml
@@ -8,11 +8,14 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <StackPanel Background="{StaticResource userControl_background}" Margin="5" >
 
-        <Label Content="{Binding Photo.Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                   Margin="5"
-                   HorizontalAlignment="Center"
-                   Foreground="{StaticResource userControl}"
-                   FontSize="{StaticResource MenuItemSize}"/>
+        <TextBox Text="{Binding Photo.Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                 Margin="5"
+                 IsEnabled="False"
+                 Background="Transparent"
+                 BorderThickness="0"
+                 HorizontalAlignment="Center"
+                 Foreground="{StaticResource userControl}"
+                 FontSize="{StaticResource MenuItemSize}"/>
 
 
         <Ellipse Margin="2"
@@ -27,16 +30,22 @@
         </Ellipse>
 
 
-        <Label Content="{Binding Photo.Author, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
-                   Margin="2"
-                   HorizontalAlignment="Center"
-                   Foreground="{StaticResource userControl}"
-                   FontSize="{StaticResource MenuItemSize}"/>
+        <TextBox Text="{Binding Photo.Author, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+                 Margin="2"
+                 BorderThickness="0"
+                 Background="Transparent"
+                 IsEnabled="False"
+                 HorizontalAlignment="Center"
+                 Foreground="{StaticResource userControl}"
+                 FontSize="{StaticResource MenuItemSize}"/>
 
-        <Label Content="{Binding Photo.Time, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                   HorizontalAlignment="Center"
-                   Foreground="{StaticResource userControl}"
-                   FontSize="{StaticResource MenuItemSize}"/>
+        <TextBox Text="{Binding Photo.Time, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                 BorderThickness="0"
+                 Background="Transparent"
+                 IsEnabled="False"
+                 HorizontalAlignment="Center"
+                 Foreground="{StaticResource userControl}"
+                 FontSize="{StaticResource MenuItemSize}"/>
     </StackPanel>
 
 </UserControl>
