--- a/Galary/Windows/PhotoWindow.xaml
+++ b/Galary/Windows/PhotoWindow.xaml
@@ -121,10 +121,10 @@
             </Button>
 
 
-            <Button BorderThickness="0"
+            <ToggleButton BorderThickness="0"
                     Width="50"
                     ToolTip="Pause image"
-                    Click="Previous_Click"
+                    Click="Play_Pause"
                     Background="Transparent"
                     Name="Pause"
                     Margin="2">
@@ -132,27 +132,14 @@
                          Margin="0 0 0 5"
                          Height="35">
                     <Ellipse.Fill>
-                        <ImageBrush ImageSource="/Images/pause.png" Stretch="Uniform"/>
+                        <ImageBrush x:Name="pausePicture"
+                                    ImageSource="/Images/pause.png"
+                                    Stretch="Uniform"/>
                     </Ellipse.Fill>
                 </Ellipse>
-            </Button>
+            </ToggleButton>
 
-            <Button BorderThickness="0"
-                    Width="50"
-                    Click="Previous_Click"
-                    ToolTip="Play Galary' image"
-                    Name="Play"
-                    Background="Transparent"
-                    Margin="2">
-                <Ellipse Width="50"
-                         Margin="0 0 0 5"
-                         Height="35">
-                    <Ellipse.Fill>
-                        <ImageBrush ImageSource="/Images/play.png" Stretch="Uniform"/>
-                    </Ellipse.Fill>
-                </Ellipse>
-            </Button>
-
+            
             <Button BorderThickness="0"
                     Width="50"
                     ToolTip="Next Image"
